# flowsight

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  STYLE_GUIDE.md  install  install.ps1  setup-dev.sh
.claude/: DEV-RULES.md  opencode.jsonc
.claude/agents/: analyze.md  explain.md  search.md
.github/workflows/: build.yml  ci.yml  test.yml
app/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs
app/src/components/AboutDialog/: AboutDialog.css  AboutDialog.tsx  index.ts
app/src/components/Breadcrumb/: Breadcrumb.css  Breadcrumb.tsx  index.ts
app/src/components/CallersView/: CallersView.css  CallersView.tsx  index.ts
app/src/components/CommandPalette/: CommandPalette.css  CommandPalette.tsx  index.ts
app/src/components/ConfirmDialog/: ConfirmDialog.css  ConfirmDialog.tsx  index.ts
app/src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx  index.ts
app/src/components/DiffView/: DiffView.css  DiffView.tsx  index.ts
app/src/components/Editor/: CodeEditor.tsx  index.ts
app/src/components/EmptyState/: EmptyState.css  EmptyState.tsx
app/src/components/Explorer/: Explorer.css  FileTree.tsx  index.ts
app/src/components/FindReplace/: FindReplace.css  FindReplace.tsx  index.ts
app/src/components/FlowView/: FlowNode.css  FlowNode.tsx  FlowTextView.css  FlowTextView.tsx  FlowView.css  FlowView.tsx  index.ts
app/src/components/GoToLine/: GoToLine.css  GoToLine.tsx  index.ts
app/src/components/KeyboardShortcuts/: KeyboardShortcuts.css  KeyboardShortcuts.tsx  index.ts
app/src/components/LoadingSpinner/: LoadingSpinner.css  LoadingSpinner.tsx
app/src/components/Outline/: Outline.css  Outline.tsx  index.ts
app/src/components/ProgressIndicator/: ProgressIndicator.css  ProgressIndicator.tsx  index.ts
app/src/components/QuickOpen/: QuickOpen.css  QuickOpen.tsx  index.ts
app/src/components/ScenarioPanel/: ScenarioPanel.css  ScenarioPanel.tsx  index.ts
app/src/components/ScenarioResults/: ScenarioResults.css  ScenarioResults.tsx  index.ts
app/src/components/Settings/: Settings.css  Settings.tsx  index.ts
app/src/components/StatusBar/: StatusBar.css  StatusBar.tsx  index.ts
app/src/components/Tabs/: TabBar.css  TabBar.tsx  index.ts
app/src/components/Toast/: Toast.css  Toast.tsx  index.ts
app/src/components/Welcome/: Welcome.css  Welcome.tsx  index.ts
app/src/store/: analysisStore.ts  editorStore.ts  index.ts  uiStore.ts
app/src/styles/: globals.css
app/src/types/: index.ts
app/src/utils/: flowFormatters.ts  recentFiles.ts
app/test-results/: .last-run.json
app/test/e2e/: basic.spec.ts
app/tests/: tauri-ui-checklist.ts
app/tests/e2e/: basic.spec.ts
crates/flowsight-analysis/: Cargo.toml
crates/flowsight-analysis/src/: async_tracker.rs  callback.rs  callgraph.rs  classification.rs  constraint.rs  evaluator.rs  funcptr.rs  learning.rs  lib.rs  pointer.rs  propagation.rs  scenario.rs  tests.rs  types.rs
crates/flowsight-analysis/tests/: real_driver_test.rs
crates/flowsight-cli/: Cargo.toml
crates/flowsight-cli/src/: main.rs
crates/flowsight-core/: Cargo.toml
crates/flowsight-core/src/: config.rs  error.rs  lib.rs  location.rs  types.rs
crates/flowsight-index/: Cargo.toml
crates/flowsight-index/src/: batch_indexer.rs  file_tracker.rs  lib.rs  storage.rs  tree_cache.rs
crates/flowsight-knowledge/: Cargo.toml
crates/flowsight-knowledge/src/: lib.rs
crates/flowsight-parser/: Cargo.toml
crates/flowsight-parser/src/: ast.rs  cache.rs  lib.rs  parallel.rs  tests.rs  treesitter.rs
crates/flowsight-parser/src/preprocessor/: cache.rs  clang.rs  config.rs  headers.rs  mod.rs
crates/flowsight-query/: Cargo.toml
crates/flowsight-query/src/: lib.rs
docs/: KNOWLEDGE-BASE-SCHEMA.md  PROJECT-PLAN.md  README.md
docs/architecture/: AI-MODEL-SELECTION.md  KNOWLEDGE-BASE-SCHEMA.md  LOCAL-AI-DESIGN.md  MULTI-LANGUAGE-ABSTRACTION.md  POINTER-ANALYSIS.md  PREPROCESSOR-INTEGRATION.md  README.md  STATIC-ANALYSIS-DESIGN.md
docs/design/: EXECUTION-FLOW-DESIGN.md  IMPROVEMENTS-PLAN.md  PROJECT-PLAN.md  README.md  TARGET-ARCHITECTURE.md  VISUALIZATION-STRATEGY.md
docs/developer/: I18N.md  README.md
docs/developer/api/: README.md
docs/developer/contributing/: README.md
docs/training/: AI-TRAINING-GUIDE.md  TRAINING-DATA-PLAN.md
docs/user-guide/: README.md
knowledge/: README.md
knowledge/bridges/: jni.yaml
knowledge/languages/c/: README.md  async_patterns.yaml
knowledge/languages/kotlin/: coroutines.yaml
knowledge/schemas/: async_pattern.schema.json  bridge.schema.json  framework.schema.json
scripts/training/: prepare_data.py  prepare_real_data.py
scripts/training/generators/: __init__.py
tests/fixtures/: simple_driver.c
