[package]
name = "flowsight-app"
version = "0.1.0"
edition = "2021"
description = "FlowSight Desktop Application"
authors = ["FlowSight Team"]
license = "MIT"

[lib]
name = "flowsight_app_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flowsight-core = { path = "../../crates/flowsight-core" }
flowsight-parser = { path = "../../crates/flowsight-parser" }
flowsight-analysis = { path = "../../crates/flowsight-analysis" }
flowsight-knowledge = { path = "../../crates/flowsight-knowledge" }
flowsight-index = { path = "../../crates/flowsight-index" }
flowsight-query = { path = "../../crates/flowsight-query" }

tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
walkdir = "2.4"

