[package]
name = "flowsight-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Code analysis engine for FlowSight (async tracking, function pointer resolution)"

[dependencies]
flowsight-core = { workspace = true }
flowsight-parser = { workspace = true }
flowsight-knowledge = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }

