[package]
name = "flowsight-knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Knowledge base for FlowSight (framework patterns, API info)"

[dependencies]
flowsight-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

