[package]
name = "flowsight-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Code parser for FlowSight (tree-sitter + Clang preprocessor)"

[dependencies]
flowsight-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"

